fix spaces on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,14 +238,11 @@ input, select, textarea {
     .embed-youtube embed {
         border: 0;
         position: absolute;
-        transform: translate(-50%, -50%); /* This is a shorthand of
-                                                 translateX(-50%) and translateY(-50%) */
-        top: 40%;  /* position the top  edge of the element at the middle of the parent */
-        left: 50%;
-        width: 80%;
-        height: 80%;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
-
 	.container {
 		margin: 0 auto;
 		max-width: calc(100% - 50px);
